compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__type_holes4.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: type X = List(_)

---

error: Unexpected type hole
  ┌─ /src/one/two.gleam:1:15
  │
1 │ type X = List(_)
  │               ^

We need to know the exact type here so type holes are not permitted.

